# Diplomarbeit_C-Code

./: CMakeLists.txt  adc.c  adc.h  main.c
Data/: Sensor_test_14.03.24.xlsx
Test-Code/: README.md  adc.c  adc.h  copy.c  fft_imp.c  fft_imp.h  main.c
Test-Code/old/: usb_comm.c  usb_comm.h
